fixed header alignment

--- a/styles/landing-page.css
+++ b/styles/landing-page.css
@@ -117,7 +117,7 @@
 }
 
 #projects-header {
-    padding: 0 0 1.4rem 4rem;
+    padding: 0 0 0 4rem;
 }
 
 .featured-case-studies {
@@ -279,8 +279,7 @@
     /* =================================*/
 
     #projects-header {
-        padding: 0; padding-bottom: 1.2rem;
-        text-align: center;
+        padding: 0 0 0 2.4rem;
     }
     .featured-case-studies {
         padding: 0rem 2.4rem;
